// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlatformLink renders with to 1`] = `
<a
  className=" "
  href="/platform-redirect/?next=%2Fenriching-error-data%2F"
>
  /platform-redirect/?next=%2Fenriching-error-data%2F
</a>
`;

exports[`PlatformLink renders without to 1`] = `
<a
  className=" "
  href="/platform-redirect/"
>
  /platform-redirect/
</a>
`;

exports[`PlatformLink uses platform context when available 1`] = `
<a
  className=" "
  href="/platforms/ruby/enriching-error-data/"
>
  /platforms/ruby/enriching-error-data/
</a>
`;
